# tbxmanager

./: .gitignore  .hgignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  Makefile  README.md  codecov.yml  mkdocs.yml  pyproject.toml  tbxmanager.m  tbxpush  tbxupload
.claude/agents/: commit.md  github-pages.md  matlab-client.md  migration.md  registry-ci.md  schema-designer.md  self-reflect.md  test-runner.md
.claude/hooks/: post-commit-reflect.sh  pre-push-changelog.sh
.github/: pull_request_template.md
.github/workflows/: deploy-site.yml  release.yml  test.yml
docs/: casestudy.md  commands.md  contributing.md  creating-packages.md  getting-started.md  index.md  quick-start-authors.md  troubleshooting.md
publish-action/: action.yml  example-workflow.yml
scripts/: build_index.py  build_packages_data.py  convert_to_registry.py  migrate_registry.py  validate_package.py
scripts/schemas/: index.schema.json  lockfile.schema.json  registry-package.schema.json  tbxmanager-package.schema.json
tests/: TestCommands.m  TestInstallWorkflow.m  TestInternal.m  TestLockSync.m  TestPublish.m  TestSHA256.m  TestSelfUpdate.m  TestSetupAndConfig.m  TestSourceManagement.m  TestVersionConstraints.m  run_tests.m  t_000.m  t_000.out  t_001.m  t_001.out  t_002.m  t_002.out  t_003.m  t_003.out  t_004.m  t_004.out  t_005.m  t_005.out  t_006.m  t_006.out  t_007.m  t_007.out  t_008.m  t_008.out  tbx_runInCaller.m  tbx_runTests.m  tbx_setupTest.m
tests/fixtures/: mock_index.json  valid_lockfile.json  valid_package.json  valid_registry_entry.json
(+3 files in other folders)
